<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:background="@color/indigo"
            android:text="@string/my_profile_title"
            android:textColor="@color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <ImageView
            android:id="@+id/settingsIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_setting"
            app:tint="@color/white"
            android:paddingTop="10dp"
            android:contentDescription="@string/menu"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:text="@string/province" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:text="@string/qualification" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:text="@string/hobby" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:text="@string/dream_job"
            />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="21dp"
            android:ems="10"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:inputType="textPersonName"
            android:hint="@string/name_hint"
            android:autofillHints="name"/>

        <Spinner
            android:id="@+id/provinceSpinner"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="21dp"
            android:entries="@array/provinces"
            android:prompt="@string/province_prompt"
            android:minWidth="48dp"
            android:minHeight="48dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="20dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/associates"
                android:minWidth="48dp"
                android:minHeight="48dp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bachelors"
                android:minWidth="48dp"
                android:minHeight="48dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masters"
                android:minWidth="48dp"
                android:minHeight="48dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doctorate"
                android:minWidth="48dp"
                android:minHeight="48dp"/>
        </RadioGroup>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="21dp"
            android:ems="10"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:inputType="text"
            android:hint="@string/hobby_hint"
            android:autofillHints="name"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="21dp"
            android:ems="10"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:inputType="text"
            android:hint="@string/dream_job_hint"
            android:autofillHints="name"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_marginTop="100dp"
            android:background="@color/indigo"
            android:textColor="@color/white"
            android:text="@string/send"/>
    </RelativeLayout>
</ScrollView>